# stat-arb

./: .gitignore  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.streamlit/: config.toml
reports/: 01_momentum.md  01_momentum_metrics.csv  02_reversal_and_combo.md  02_reversal_and_combo_metrics.csv  03_futures_and_carry.md  03_futures_and_carry_metrics.csv  04_macro_signals.md  04_macro_signals_metrics.csv  05_portfolio_construction.md  05_portfolio_construction_metrics.csv  06_bootstrap_sharpe.csv  06_deflated_sharpe.csv  06_final_metrics.csv  06_master_cost_table.csv  06_regime_table.csv  07_sensitivity.md  07_sensitivity_table.csv  08_annual_sharpe.csv  08_walkforward.md  08_walkforward_baseline.csv  08_walkforward_summary.csv  09_calendar_carry_validation.csv  09_calendar_carry_validation.md  10_dsr_trial_ledger.csv  10_dsr_trials.csv  10_dsr_trials.md  11_ic_analysis.csv  11_ic_decay.md  11_signal_autocorr.csv  FINAL.md
scripts/: daily_pulse.py  dashboard.py  run_calendar_carry_validation.py  run_carry_and_futures.py  run_dsr_trials.py  run_final_evaluation.py  run_ic_analysis.py  run_macro_signals.py  run_momentum.py  run_optimization.py  run_reversal_and_combo.py  run_sensitivity.py  run_walkforward.py
tests/: test_backtest_engine.py  test_costs_linear.py  test_data_panel.py  test_data_universe.py  test_evaluation_bootstrap.py  test_evaluation_deflated_sharpe.py  test_evaluation_metrics.py  test_evaluation_regimes.py  test_evaluation_walk_forward.py  test_evaluation_walkforward.py  test_live_portfolio.py  test_portfolio_construction.py  test_signals_carry.py  (+10 more)
(+55 files in other folders)
